@@ -102,12 +102,12 @@ typedef grub_int32_t	grub_ssize_t;
 
 #if GRUB_CPU_SIZEOF_VOID_P == 8
 # define GRUB_ULONG_MAX 18446744073709551615UL
-# define GRUB_LONG_MAX 9223372036854775807UL
-# define GRUB_LONG_MIN -9223372036854775808UL
+# define GRUB_LONG_MAX 9223372036854775807L
+# define GRUB_LONG_MIN (-9223372036854775807L - 1)
 #else
 # define GRUB_ULONG_MAX 4294967295UL
-# define GRUB_LONG_MAX 2147483647UL
-# define GRUB_LONG_MIN -2147483648UL
+# define GRUB_LONG_MAX 2147483647L
+# define GRUB_LONG_MIN (-2147483647L - 1)
 #endif
 
 #if GRUB_CPU_SIZEOF_VOID_P == 4
